--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,33 +1,48 @@
+.p-menubar {
+  display: fixed;
+  padding: 10px;
+  background-color: white;
+}
 
+.p-menubar > *:nth-child(1) {
+  order: 2;
+}
+.p-menubar > *:nth-child(2) {
+  order: 1;
+  margin-left: auto;
+  margin-right: auto;
+}
+.p-menubar > *:nth-child(3) {
+  order: 3;
+}
+.p-menubar > *:nth-child(4) {
+  order: 4;
+}
+
+.p-menubar > .p-menubar-button {
+  width: 50px;
+  height: 50px;
+}
+.p-menuitem {
+  margin: 0px 10px 0px 10px;
+}
+
+.p-menuitem-text {
+  font-size: medium;
+}
+
+.p-menubar > .p-menubar-button {
+  margin-left: 7px;
+}
+
+@media screen and (min-width: 960px) {
   .p-menubar > *:nth-child(1) {
     order: 2;
   }
   .p-menubar > *:nth-child(2) {
     order: 1;
-    margin-left: auto;
-    margin-right: auto;
   }
   .p-menubar > *:nth-child(3) {
     order: 3;
   }
-  .p-menubar > *:nth-child(4) {
-    order: 4;
-  }
-  
-  .p-menubar > .p-menubar-button{
-    margin-left: 7px;
-  }
-  
-  
-  @media screen and (min-width: 960px) {
-  
-    .p-menubar > *:nth-child(1) {
-      order: 2;
-    }
-    .p-menubar > *:nth-child(2) {
-      order: 1;
-    }
-    .p-menubar > *:nth-child(3) {
-      order: 3;
-    }
-  }
+}
